# OBSCURA-PRIVACY

./: readme.md
Backend/Compliance/: .env.example  README.md  package-lock.json  package.json  test-api.js  test-request.json
Backend/Compliance/docs/: API_TEST_RESULTS.md  endpoint.md
Backend/Compliance/src/: server.js
Backend/Compliance/src/config/: rangeClient.js
Backend/Compliance/src/controllers/: addressController.js
Backend/Compliance/src/middleware/: errorHandler.js
Backend/Compliance/src/routes/: addressRoutes.js
Backend/darkOTC/: .dockerignore  .env.example  .railway.toml  Dockerfile  README.md  jest.config.js  obscura-dark-otc-rfq-llms.txt  obscura-llms.txt  package-lock.json  package.json
Backend/darkOTC/docs/: RAILWAY_QUICKSTART.md
Backend/darkOTC/public/: index-old.html
Backend/darkOTC/src/: index.ts
Backend/darkOTC/supabase/: README.md
Backend/darkPool/: .env.example  .gitignore  Arcium.toml  Dockerfile  README.md  docker-compose.yml  package.json  test-api.js
Backend/darkPool/encrypted-ixs/: match_orders.rs
Backend/darkPool/programs/darkpool/: Cargo.toml
Backend/darkPool/programs/darkpool/src/: lib.rs
Backend/darkPool/scripts/: initComputationDefs.js
Backend/darkPool/src/: server.js
Backend/darkSwap&Bridge/: .env.example  README.md  STRUCTURE.txt  package-lock.json  package.json  postman_collection.json  test-api.js
Backend/darkSwap&Bridge/src/: server.js
Frontend/mobile-app/obscura-dapp/: app.json  package-lock.json  package.json
Frontend/web/obscura-web/: README.md  package-lock.json  package.json
(+99 files in other folders)
