[package]
name = "darkpool"
version = "0.1.0"
description = "Dark Pool trading with Arcium MPC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darkpool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
arcium-anchor = "0.6.3"
